--- a/test_task/frontend/src/components/filterMenu/filterMenuElement/styles.module.css
+++ b/test_task/frontend/src/components/filterMenu/filterMenuElement/styles.module.css
@@ -6,6 +6,7 @@
         font-size: 16px;
         border: none;
         outline: none;
+        width: 100%;
 
     background-color: black;
 }
@@ -17,6 +18,7 @@
         font-size: 16px;
         border: none;
         outline: none;
+        width: 100%;
 
     background-color: blue;
 }
